Update Gradle to version 8.14.3 and fix deprecated features (#715)
* Remove Gradle wrapper version from build.gradle

* Update Gradle to version 8.14.3

* Use Toolchains for JVM projects to set Java version

* Assign properties using the 'propName = value' syntax

Setting a property via the Gradle-generated 'propName value' or
'propName(value)' syntax in Groovy DSL has been deprecated.

* Remove --add-opens arguments for tests

The --add-opens arguments are not needed anymore since #443 and are
causing issues with Toolchains on newer JVM versions.

* Add Foojay Toolchains Plugin to automatically download JDK 8 if needed